@@ -2,8 +2,10 @@ OpenLDAP 2.3 Change Log
 
 OpenLDAP 2.3.15 Engineering
 	Fixed slapd strerror logging bug (ITS#4292)
-	Fixed slapd-ldap password modify exop password return (ITS#4294)
 	Fixed slapd ACL add/delete fraction issue (ITS#4295)
+	Fixed slapd ACL users selfwrite issue (ITS#4299)
+	Fixed slapd attrs/objectclass replog issues (ITS#4298)
+	Fixed slapd-ldap password modify exop password return (ITS#4294)
 	Build environment
 		Disable test030-relay when threads are unavailable (ITS#4297)
 
